--- a/Style.css
+++ b/Style.css
@@ -6,12 +6,11 @@
 *{list-style: none;
 }
 .cuerpo {
-    width: 100vw;
+    width: 100%;
     margin: 0;
     font-family: 'Roboto', sans-serif;
     background-color: #264189;
-    position: relative;
-    padding-bottom: 3em;
+    padding-bottom:0;
     min-height: 100vh;
     overflow-x: hidden;
     display: grid;
@@ -19,8 +18,6 @@
     "head head"
     "main main"
     "foot foot";
-    grid-template-rows: 5% 35% 60%;
-    grid-template-columns:  1fr;
 }
 .cabecera {
     width: 100%;
@@ -28,11 +25,9 @@
     font-family: 'Roboto', sans-serif;
     background-color: #264189;
     grid-area: head;
-    
 }
-.contenedorLogo {
-    width: 50vw;
-    align-items: center;
+.navbar-brand {
+    margin-top: 5vw;
 }
 .cabecera__imagen {
     width: 20vw;
@@ -42,66 +37,31 @@
      width: 21vw;
 
 }
-.barraNavegacion {
-    width: 200vw;
-    display: flex;
-    justify-content: center;
+.navbar-nav{
+    margin-top: 5vw;
+    margin-left: 10vw;
 }
-.barraNavegacion a:hover{
-    background: #1e7184;
+.nav-item{
+    margin-right: 1vw;
 }
-.barraNavegacion__lista {
-    list-style: none;
-    display: flex;
-    margin-top: 10vw;
-    justify-content: center;
+.nav-link {
+    font-size: 3vw;
 }
-.barraNavegacion__lista li {
-    margin-right: 8vw;
-}
-a {
-    text-decoration: none;
-    color: #40c6e4;
-    display: block;
+.navbar-light .navbar-nav .nav-link {
+        color: #fff;
+        transition: all 300ms ease;
+        height: 100%;
+
 }
 .principal {
     width: 100%;
-    margin-top: 10vw;
     background-color: #264189;
+    margin-top: 20vw;
     grid-area: main;
 }
-.seccion {
-    display: flex;
-    flex-direction: row;
-    width: 100vw;
-    margin-top: 10vw;
-    padding-bottom: 10vw;
-}
-.contenedorTextoUno {
-    width: 50vw;
-}
-.tituloUno {
-    width: 50vw;
-   text-align: center;
-    color: white;
-    font-size: 3vw;
-    margin-top: 9vw;
-   margin-bottom: 3vw;
-}
-.parrafoL {
-    width: 50vw;
-    margin-left: 3vw;
-    text-align: justify;
-    color:white;
-    text-decoration: solid;
-    font-size: 1.5vw;
-    line-height: 3vw;
-}
-.contenedorCelular {
-    width: 50vw;
-    display: flex;
-    justify-content: center;
-
+.container {
+    margin-right: 40vw;
+    box-shadow: 0.5vw 1vw 5vw #000;
 }
 .imagenCelular {
     width: 40vw;
@@ -112,28 +72,19 @@ a {
 .imagenCelular:hover {
     filter: blur(20px);
 }
-
-.seccionDos {
-    display: flex;
-    flex-direction: column;
-    margin-top: 30vw;
-}
 .contenedorTitulodos {
     width: 100vw;
-    display: flex;
-    justify-content: center;
+    margin-top: 20vw;
     margin-bottom: 10vw;  
     color: white;
-    }
-.tituloDos {
-    display: flex;
-    justify-content: center;
-    font-size: 3vw;
+} 
+.text-center{
+    font-size: 6vw;
     transition: all 300ms;
     
 }
-.tituloDos:hover {
-    font-size: 3.5vw;
+.text-center:hover {
+    font-size: 6.5vw;
 }
 .contenedorPerfiles {
     width: 100vw;
@@ -159,31 +110,52 @@ a {
     border-radius: 7vw;
 }
 .barraFooter {
-    background: linear-gradient(to bottom, gray, black)   /* rgb(83, 81, 81); */ ;
-    padding: 1em 0;
+    width: 100%;
+    background: linear-gradient(to bottom, gray, black);
     text-align: center;
-    position: absolute;
-    bottom: 0;
-    width: 100vw;
+    padding-bottom: 3vw;
     grid-area: foot;
 }
-.redSocial {
+.redsocial {
     display: flex;
-    justify-content:space-evenly;
     margin-bottom: 5vw;
+    justify-content: space-around;
 
 }
-.redSocial a img {
+
+.redsocial a img {
+    width: 2vw;
+    margin: 0.5vw;
     transition: all 300ms;
 }
-.redSocial a img:hover {
-width: 33px;
+.redsocial a img:hover {
+    width: 33px;
 }
 
+.migas {
+    display: flex;
+    flex-direction: column;
+    font-size: 2vw;
+    text-decoration: none;
+    color: #000;
+    line-height: 1.5vw;
+
+    
+}
 .barraFooter__lista{
     list-style: none;
 }
+.tel__footer{
+    display: flex;
+    justify-content: center;
+
+}
+.dir__footer{
+    display: flex;
+    justify-content: center;
+}
 .copy {
+    margin-top: 3vw;
     color: white;
 }
 
@@ -192,13 +164,14 @@ width: 33px;
  **********************/
  .principalServicios {
      width: 100%;
-    grid-area: main;
+     grid-area: main;
+     margin-bottom: 10vw;
 }
  .serviciosSection {
      width: 100vw;
      display: flex;
      flex-direction: column;
-     margin-top: 30vw;
+     margin-top: 20vw;
  }
    
  .serviciosTitulo1 {
@@ -334,11 +307,12 @@ input:-moz-placeholder {
  **********************/
  .principalUsuarios{
      width: 100%;
+     margin-bottom: 15vw;
      grid-area: main;
  }
  .contenedorUsuarios {
      width: 50vw;
-     margin-top: 23vw;
+     margin-top: 8vw;
      margin-left: 25vw;
      margin-right: 25vw;
      margin-bottom: 10vw;
@@ -384,12 +358,11 @@ input:-moz-placeholder {
  .principalConvierte_Gaucho {
      width: 100%;
      grid-area: main;
-     margin-bottom: 10vw;
-
+     margin-bottom: 20vw;
  }
  .formRegistro {
      width: 45vw;
-     margin-top: 25vw;
+     margin-top: 10vw;
      margin-left: 25vw;
      background: rgb(145, 143, 143);
      padding: 3vw;
@@ -467,42 +440,153 @@ input:-moz-placeholder {
 
  /* Index */
 @media only screen and (max-width:768px) {
-.cabecera__imagen {
-    width: 15vw;
+
+.cabecera {
+    display: grid;
+   grid-area: head;
 }
-.barraNavegacion__lista li a{
-        font-size: 1.7vw;
+.container-fluid {
+    display: flex;
+    flex-direction:row-reverse;
+}
+.navbar-brand {
+    margin-top: 5vw;
+    margin-right: 40vw;
+}
+.nav-link {
+    font-size: 3vw;
+}
+
+.principal {
+    width: 100%;
+    margin-top: 25vw;
+    background-color: #264189;
+    margin-bottom: 40vw;
+    grid-area: main;
+}
+.seccion {
+    display: flex;
+    flex-direction: row;
+    width: 100vw;
+    margin-top: 20vw;
+    padding-bottom: 10vw;
+}
+.contenedorTextoUno {
+    width: 50vw;
 }
 .tituloUno {
-    font-size: 2vw;
+    width: 50vw;
+   text-align: center;
+    color: white;
+    font-size: 4vw;
+    margin-top: 9vw;
+   margin-bottom: 8vw;
 }
-.imagenCelular {
-    width: 30vw;
-    height: 35vw;
+.parrafoL {
+    width: 50vw;
+    margin-left: 3vw;
+    text-align: justify;
+    color:white;
+    text-decoration: solid;
+    font-size: 3vw;
+    line-height: 5vw;
 }
-.tituloDos {
-    font-size: 2vw;
-}
-.barraFooter {
-    width: 100vw;
+.contenedorCelular {
+    width: 50vw;
     display: flex;
-    flex-direction: column;
-    background-color: rgb(83, 81, 81); 
-    padding: 1em 0;
-    position: absolute;
-    text-align: center;
-    bottom: 0;
+    justify-content: center;
 
 }
+.imagenCelular {
+    width: 40vw;
+    height: 45vw;
+    filter: blur(0);
+    transition: all 0.5s linear;
+}
+.imagenCelular:hover {
+    filter: blur(20px);
+}
+
+.seccionDos {
+    display: flex;
+    flex-direction: column;
+    margin-top: 30vw;
+}
+.contenedorTitulodos {
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 10vw;  
+    color: white;
+    }
+.tituloDos {
+    display: flex;
+    justify-content: center;
+    font-size: 4vw;
+    transition: all 300ms;
+    
+}
+.tituloDos:hover {
+    font-size: 4.5vw;
+}
+.contenedorPerfiles {
+    width: 100vw;
+   margin-bottom: 30vw;
+}
+.perfilesDestacados {
+    display: flex;
+    justify-content: space-evenly;
+}
+.caraUno {
+    width: 14vw;
+    height: 14vw;
+    border-radius:7vw;
+ }
+.caraDos {
+    width: 14vw;
+    height: 14vw;
+    border-radius:7vw;
+}
+.caraTres {
+    width: 14vw;
+    height: 14vw;
+    border-radius: 7vw;
+}
+.barraFooter {
+    background: linear-gradient(to bottom, gray, black)   /* rgb(83, 81, 81); */ ;
+    padding: 1em 0;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    width: 100vw;
+    grid-area: foot;
+}
+.redSocial {
+    display: flex;
+    justify-content:space-evenly;
+    margin-bottom: 5vw;
+
+}
+.redSocial a img {
+    transition: all 300ms;
+}
+.redSocial a img:hover {
+width: 33px;
+}
+
+.barraFooter__lista{
+    list-style: none;
+    grid-area: foot;
+}
 .copy {
-    font-size: 1.5vw;
+    color: white;
 }
 /*Servicios */
 .principalServicios {
      width: 100%;
      display: flex;
      flex-direction: column;
-     margin-bottom: 15vw;
+     margin-bottom: 40vw;
 
 
 }
@@ -510,6 +594,7 @@ input:-moz-placeholder {
     display: flex;
     flex-direction: column;
     margin-top: 6vw;
+    margin-bottom: 10vw;
 }
 .serviciosContenedorIconos1 {
     display: flex;
@@ -547,44 +632,49 @@ input:-moz-placeholder {
 @media only screen and (max-width:320px) {
 
     /* Index */
-    .cabecera {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-    }
-    .cabecera__imagen {
-    width: 30vw;
-    margin-top: 2vw;
-    margin-left: 37vw;
- 
-}
-    .barraNavegacion__lista {
-    width: 30vw;
-    margin-top: 6vw;
-    margin-right: 100vw;
-    margin-left: 0vw;
-    list-style: none;
+.cabecera {
+    width: 100%;
     display: flex;
     flex-direction: column;
+    }
+.container-fluid {
+    width: 100vw;
+    display: flex;
+    flex-direction:row;
+}
+.navbar-brand {
+    width: 70vw;
+    margin-top: 5vw;
+    margin-left: 0;
+}
+.cabecera__imagen {
+    width: 30vw;
+    margin-top: 2vw;
+    margin-left: 30vw;
+}
+.cabecera__imagen:hover{
+    width: 30vw;
+}
+.navbar-nav{
+    margin-top: 5vw;
+    margin-left: 5vw;
 
-    }
-    
-    .barraNavegacion__lista li a{
-        font-size: 5vw;
-        display: flex;
-        justify-content: space-evenly;
-        margin-top: 5vw;
-    }
+}
+.nav-item{
+    margin-right: 1vw;
+}
+.nav-link {
+    font-size: 3vw;
+}
 .principal {
     width: 100%;
-    margin-top: 80vw;
+    margin-top: 5vw;
     background-color: #264189;
     display: flex;
     flex-direction: column;
 }
 .seccion {
     width: 100vw;
-    margin-top: 20vw;
     display: flex;
     flex-direction: column;
 }
@@ -608,9 +698,9 @@ input:-moz-placeholder {
     font-size: 4vw;
     line-height: 7vw;
 }
-   .contenedorCelular{
-       width: 100vw;
-       justify-content: center;
+.contenedorCelular{
+    width: 100vw;
+    justify-content: center;
    }
    .imagenCelular {
     width: 30vw;
@@ -664,13 +754,13 @@ input:-moz-placeholder {
     margin-top: 5vw;
 }
 .barraFooter {
+    width: 100%;
     background-color: rgb(83, 81, 81); 
     padding: 1em 0;
     text-align: center;
-    position: absolute;
     bottom: 0;
-    width: 100vw;
 }
+    
 .redSocial {
     display: flex;
     justify-content:space-evenly;
@@ -682,16 +772,16 @@ input:-moz-placeholder {
     list-style: none;
 }
 .copy {
-    font-size: 1.5vw; }
+    font-size: 3vw; }
 
     /* Servicios */
     .principalServicios {
      width: 100%;
      display: flex;
      flex-direction: column;
-     margin-top: 90vw;
-     margin-bottom: 10vw;
-}
+     margin-top: 10vw;
+     margin-bottom: 20vw;
+    }
 .flexsearch--wrapper {
 	height: auto;
 	width: auto;
@@ -761,6 +851,7 @@ input:-moz-placeholder {
     display: flex;
     flex-direction: column;
     margin-top: 12vw;
+    margin-bottom: 30vw;
 }
 .serviciosContenedorIconos1 {
     display: flex;
@@ -773,9 +864,9 @@ input:-moz-placeholder {
     display: flex;
    justify-content: center;
    justify-content: space-around;
-   padding-left: 5vw;
+   padding-left: 3vw;
    padding-top: 2vw;
-   font-size: 3vw;
+   font-size: 0.5vw;
 }
 .serviciosContenedor2 {
     display: flex;
@@ -791,6 +882,6 @@ input:-moz-placeholder {
    justify-content: space-around;
    padding-left: 3vw;
    padding-top: 2vw;
-   font-size: 3vw;
+   font-size: 0.5vw;
 }
 }
