--- a/Style.css
+++ b/Style.css
@@ -13,18 +13,12 @@
     padding-bottom:0;
     min-height: 100vh;
     overflow-x: hidden;
-    display: grid;
-    grid-template-areas:
-    "head head"
-    "main main"
-    "foot foot";
 }
 .cabecera {
     width: 100%;
     display: flex;
     font-family: 'Roboto', sans-serif;
     background-color: #264189;
-    grid-area: head;
 }
 .navbar-brand {
     margin-top: 5vw;
@@ -39,82 +33,57 @@
 }
 .navbar-nav{
     margin-top: 5vw;
-    margin-left: 10vw;
+    margin-left: 10vw
 }
 .nav-item{
     margin-right: 1vw;
-}
-.nav-link {
-    font-size: 3vw;
 }
 .navbar-light .navbar-nav .nav-link {
         color: #fff;
         transition: all 300ms ease;
         height: 100%;
+        box-shadow: 0.5vw 1vw 5vw #000;
 
 }
 .principal {
-    width: 100%;
-    background-color: #264189;
     margin-top: 20vw;
-    grid-area: main;
 }
-.container {
-    margin-right: 40vw;
-    box-shadow: 0.5vw 1vw 5vw #000;
-}
-.imagenCelular {
+.imagen__celular {
     width: 40vw;
     height: 45vw;
     filter: blur(0);
     transition: all 0.5s linear;
 }
-.imagenCelular:hover {
+.imagen__celular:hover {
     filter: blur(20px);
 }
 .contenedorTitulodos {
-    width: 100vw;
     margin-top: 20vw;
     margin-bottom: 10vw;  
-    color: white;
 } 
-.text-center{
-    font-size: 6vw;
+.tituloDos{
     transition: all 300ms;
     
 }
-.text-center:hover {
-    font-size: 6.5vw;
+.tituloDos:hover {
+    font-size: 3vw;
 }
 .contenedorPerfiles {
-    width: 100vw;
    margin-bottom: 30vw;
 }
 .perfilesDestacados {
     display: flex;
     justify-content: space-evenly;
 }
-.caraUno {
+.caras{
     width: 14vw;
     height: 14vw;
     border-radius:7vw;
- }
-.caraDos {
-    width: 14vw;
-    height: 14vw;
-    border-radius:7vw;
-}
-.caraTres {
-    width: 14vw;
-    height: 14vw;
-    border-radius: 7vw;
 }
 .barraFooter {
     width: 100%;
     background: linear-gradient(to bottom, gray, black);
     text-align: center;
-    padding-bottom: 3vw;
-    grid-area: foot;
 }
 .redsocial {
     display: flex;
@@ -135,7 +104,6 @@
 .migas {
     display: flex;
     flex-direction: column;
-    font-size: 2vw;
     text-decoration: none;
     color: #000;
     line-height: 1.5vw;
@@ -155,7 +123,7 @@
     justify-content: center;
 }
 .copy {
-    margin-top: 3vw;
+    margin-top: 1vw;
     color: white;
 }
 
@@ -164,7 +132,6 @@
  **********************/
  .principalServicios {
      width: 100%;
-     grid-area: main;
      margin-bottom: 10vw;
 }
  .serviciosSection {
@@ -180,97 +147,15 @@
      text-align: center;
      color: white;
  }
-
-.flexsearch--wrapper {
-	height: auto;
-	width: auto;
-	max-width: 100%;
-	overflow: hidden;
-	background: transparent;
-	margin: 0;
-	position: static;
-}
-	
-.flexsearch--form {
-	overflow: hidden;
-	position: relative;
-}
-	
-.flexsearch--input-wrapper {
-	padding: 0 5vw 0 0;
-	overflow: hidden;
-}
-
-.flexsearch--input {
-  width: 100%;
-}
-
-.flexsearch {
-  padding: 0 8vw 0 16vw;
-  margin-bottom: 10vw;
-}
-
-.flexsearch--input {
-  -webkit-box-sizing: content-box;
-	-moz-box-sizing: content-box;
-	box-sizing: content-box;
- 	height: 4vw;
-  padding: 0 3vw 0 1vw;
-	border-color: #888;
-  border-radius: 4.2vw; /* (height/2) + border-width */
-  border-style: solid;
-	border-width: 0.5vw;
-  margin-top: 1vw;
-  color: #333;
-  font-family: 'Helvetica', sans-serif;
-	font-size: 1.7vw;
-	-webkit-appearance: none;
-	-moz-appearance: none;
-}
-	
-.flexsearch--submit {
-  position: absolute;
-	right: 0;
-	top: 0;
-	display: block;
-	width: 6vw;
-	height: 4vw;
-  padding: 0;
-  border: none;
-	margin-top: 1.5vw; 
-  margin-right: 1vw;
-	background: transparent;
-  color: #888;
-  font-family: 'Helvetica', sans-serif;
-  font-size: 2.5vw;
-  line-height: 4.5vw;
-}
-
-.flexsearch--input:focus {
-  outline: none;
-  border-color: #333;
-}
-
-.flexsearch--input:focus.flexsearch--submit {
- 	color: #333; 
-}
-
-.flexsearch--submit:hover {
-  color: #333;
-  cursor: pointer;
-}
-
-::-webkit-input-placeholder {
-	color: #888;  
-}
-
-input:-moz-placeholder {
-  color: #888
-}
-.contenedores {
+.input-group {
     display: flex;
-    flex-direction: column;
-    margin-top: 6vw;
+    justify-content: center;
+ }
+.form-outline {
+    width: 30vw;
+}
+.servicios {
+    margin-top: 15vw;
     margin-bottom: 6vw;
 
 }
@@ -278,7 +163,14 @@ input:-moz-placeholder {
     display: flex;
    justify-content: center;
    justify-content: space-around;
-   padding-left: 5vw; 
+   padding-left: 5vw;
+}
+.serviciosContenedorIconos1 a i {
+    color: black;
+    transition: 300ms;
+}
+.serviciosContenedorIconos1 a i:hover{
+    font-size: 9vw;
 }
 .serviciosContenedorTextoIcon1 {
     display: flex;
@@ -294,6 +186,13 @@ input:-moz-placeholder {
    padding-top: 6vw;
    padding-left: 5vw;
 }
+.serviciosContenedor2 a i {
+    color: black;
+    transition: 300ms;
+}
+.serviciosContenedor2 a i:hover{
+    font-size: 9vw;
+}
 .serviciosContenedorTextoIcon2 {
     display: flex;
    justify-content: center;
@@ -308,7 +207,6 @@ input:-moz-placeholder {
  .principalUsuarios{
      width: 100%;
      margin-bottom: 15vw;
-     grid-area: main;
  }
  .contenedorUsuarios {
      width: 50vw;
@@ -357,7 +255,6 @@ input:-moz-placeholder {
  *******************************/
  .principalConvierte_Gaucho {
      width: 100%;
-     grid-area: main;
      margin-bottom: 20vw;
  }
  .formRegistro {
@@ -418,7 +315,6 @@ input:-moz-placeholder {
  *******************/  
  .principalContacto {
      width: 100%;
-     grid-area: main;
  }
  .formContacto {
     width: 40vw;
@@ -437,451 +333,189 @@ input:-moz-placeholder {
 /*********************
  *    MEDIA QUERIE   *
  *********************/ 
+ @media only screen and (max-width:1024px) {
 
- /* Index */
-@media only screen and (max-width:768px) {
-
-.cabecera {
-    display: grid;
-   grid-area: head;
-}
-.container-fluid {
-    display: flex;
-    flex-direction:row-reverse;
-}
-.navbar-brand {
-    margin-top: 5vw;
-    margin-right: 40vw;
-}
-.nav-link {
-    font-size: 3vw;
-}
-
-.principal {
-    width: 100%;
-    margin-top: 25vw;
-    background-color: #264189;
-    margin-bottom: 40vw;
-    grid-area: main;
-}
-.seccion {
-    display: flex;
-    flex-direction: row;
-    width: 100vw;
-    margin-top: 20vw;
-    padding-bottom: 10vw;
-}
-.contenedorTextoUno {
-    width: 50vw;
-}
-.tituloUno {
-    width: 50vw;
-   text-align: center;
-    color: white;
-    font-size: 4vw;
-    margin-top: 9vw;
-   margin-bottom: 8vw;
-}
-.parrafoL {
-    width: 50vw;
-    margin-left: 3vw;
-    text-align: justify;
-    color:white;
-    text-decoration: solid;
-    font-size: 3vw;
-    line-height: 5vw;
-}
-.contenedorCelular {
-    width: 50vw;
-    display: flex;
-    justify-content: center;
+    /* Index */
+     .tel__footer {
+         font-size: 1.2vw !important;
+     }
+     .dir__footer{
+         font-size: 1.2vw !important;
+     }
+     .contenedorMigas a{
+         margin-bottom: 1vw;
+         font-size: 1.5vw;
+     }
 
 }
-.imagenCelular {
-    width: 40vw;
-    height: 45vw;
-    filter: blur(0);
-    transition: all 0.5s linear;
+/* ------------------------------------ */
+ @media only screen and (max-width:960px) {
+
+    /* Index */
+     .tel__footer {
+         font-size: 1.2vw !important;
+     }
+     .dir__footer{
+         font-size: 1.2vw !important;
+     }
 }
-.imagenCelular:hover {
-    filter: blur(20px);
+.contenedorMigas a{
+         margin-bottom: 1vw;
+         font-size: 1.5vw;
+     }
+
+/* ------------------------------------ */
+@media only screen and (max-width:800px) {
+
+    /* Index */
+     .tel__footer {
+         width: 25vw;
+         font-size: 1.2vw;
+     }
+     .dir__footer{
+         width: 25vw;
+         font-size: 1vw;
+     }
+     .contenedorMigas a{
+         margin-bottom: 1vw;
+         font-size: 1.5vw;
+     }
 }
 
-.seccionDos {
-    display: flex;
-    flex-direction: column;
-    margin-top: 30vw;
-}
-.contenedorTitulodos {
-    width: 100vw;
-    display: flex;
-    justify-content: center;
-    margin-bottom: 10vw;  
-    color: white;
+/* ------------------------------------ */
+@media only screen and (max-width:414px) {
+
+    /* Index */
+    .logo {
+        width: 80%;
+        display: flex;
+        justify-content:center;
     }
-.tituloDos {
-    display: flex;
-    justify-content: center;
-    font-size: 4vw;
+    .cabecera__imagen {
+        width: 40vw;
+    }
+    .seccionUno {
+        display: flex;
+        flex-direction: column !important;
+    }
+    .contenedorCelu {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .tituloDos{
+     font-size:6vw;
     transition: all 300ms;
     
 }
 .tituloDos:hover {
-    font-size: 4.5vw;
+    font-size: 6vw;
 }
-.contenedorPerfiles {
-    width: 100vw;
-   margin-bottom: 30vw;
+.caras{
+    width: 20vw;
+    height: 20vw;
+    border-radius:40vw;
+} 
+.contenedorMigas {
+    display: none;
 }
-.perfilesDestacados {
-    display: flex;
-    justify-content: space-evenly;
-}
-.caraUno {
-    width: 14vw;
-    height: 14vw;
-    border-radius:7vw;
- }
-.caraDos {
-    width: 14vw;
-    height: 14vw;
-    border-radius:7vw;
-}
-.caraTres {
-    width: 14vw;
-    height: 14vw;
-    border-radius: 7vw;
-}
-.barraFooter {
-    background: linear-gradient(to bottom, gray, black)   /* rgb(83, 81, 81); */ ;
-    padding: 1em 0;
-    text-align: center;
-    position: absolute;
-    bottom: 0;
-    width: 100vw;
-    grid-area: foot;
-}
-.redSocial {
-    display: flex;
-    justify-content:space-evenly;
-    margin-bottom: 5vw;
-
-}
-.redSocial a img {
+.redsocial a img {
+    width: 10vw;
+    margin:0;
     transition: all 300ms;
 }
-.redSocial a img:hover {
-width: 33px;
+.redsocial a img:hover {
+    width: 33px;
 }
-
-.barraFooter__lista{
-    list-style: none;
-    grid-area: foot;
+.tel__footer {
+ width: 80vw;
+font-size: 3vw !important;
+}
+.dir__footer{
+width: 80vw;
+font-size: 3vw !important;
 }
 .copy {
-    color: white;
+    font-size: 3vw !important;
 }
-/*Servicios */
-.principalServicios {
-     width: 100%;
-     display: flex;
-     flex-direction: column;
-     margin-bottom: 40vw;
-
-
+/* -----------------------------------
+-----------Servicios------------------ */
+.form-outline {
+width: 50vw
 }
-.contenedores {
-    display: flex;
-    flex-direction: column;
-    margin-top: 6vw;
-    margin-bottom: 10vw;
+.serviciosContenedorIconos1 a i {
+    font-size: 12vw;
 }
-.serviciosContenedorIconos1 {
-    display: flex;
-   justify-content: center;
-   justify-content: space-around;
-   padding-left: 5vw; 
-   font-size: 1vw;
+.serviciosContenedorIconos1 a i:hover{
+    font-size: 12vw;
 }
-.serviciosContenedorTextoIcon1 {
-    display: flex;
-   justify-content: center;
-   justify-content: space-around;
-   padding-left: 5vw;
-   padding-top: 2vw;
-   font-size: 1.5vw;
+.serviciosContenedorTextoIcon1 h3 {
+    font-size: 5vw;
 }
-.serviciosContenedor2 {
-    display: flex;
-   justify-content: center;
-   justify-content: space-around;
-   padding-top: 6vw;
-   padding-left: 5vw;
-   font-size: 1vw;
+.serviciosContenedor2 a i {
+    font-size: 12vw;
 }
-.serviciosContenedorTextoIcon2 {
-    display: flex;
-   justify-content: center;
-   justify-content: space-around;
-   padding-left: 3vw;
-   padding-top: 2vw;
-   font-size: 1.5vw;
+.serviciosContenedor2 a i:hover{
+    font-size: 12vw;
+}
+.serviciosContenedorTextoIcon2 h3 {
+    font-size: 5vw;
 }
 }
 /* ------------------------------------ */
-@media only screen and (max-width:320px) {
+@media only screen and (max-width:375px) {
 
     /* Index */
-.cabecera {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
+    .logo {
+        width: 80%;
+        display: flex;
+        justify-content:center;
     }
-.container-fluid {
-    width: 100vw;
-    display: flex;
-    flex-direction:row;
-}
-.navbar-brand {
-    width: 70vw;
-    margin-top: 5vw;
-    margin-left: 0;
-}
-.cabecera__imagen {
-    width: 30vw;
-    margin-top: 2vw;
-    margin-left: 30vw;
-}
-.cabecera__imagen:hover{
-    width: 30vw;
-}
-.navbar-nav{
-    margin-top: 5vw;
-    margin-left: 5vw;
-
-}
-.nav-item{
-    margin-right: 1vw;
-}
-.nav-link {
-    font-size: 3vw;
-}
-.principal {
-    width: 100%;
-    margin-top: 5vw;
-    background-color: #264189;
-    display: flex;
-    flex-direction: column;
-}
-.seccion {
-    width: 100vw;
-    display: flex;
-    flex-direction: column;
-}
-.contenedorTextoUno {
-    width: 100vw;
-}
-.tituloUno {
-    width: 100vw;
-    font-size: 6vw;
-   }
-.parrafoL {
-    width: 90vw;
-    margin-top: 5vw;
-    margin-bottom: 10vw;
-    text-align: center;
-    display: flex;
-    flex-wrap: wrap;
-    text-align: justify;
-    color:white;
-    text-decoration: solid;
-    font-size: 4vw;
-    line-height: 7vw;
-}
-.contenedorCelular{
-    width: 100vw;
-    justify-content: center;
-   }
-   .imagenCelular {
-    width: 30vw;
-    height: 35vw;
-   }
-   
-.seccionDos {
-    width: 100vw;
-    display: flex;
-    flex-direction: column;
-    margin-top: 30vw;
-    margin-bottom: 0vw;
-}
-.contenedorTitulodos {
-    width: 100vw;
-    display: flex;
-    justify-content: center;
-    margin-bottom: 10vw;  
-    color: white;
+    .cabecera__imagen {
+        width: 40vw;
     }
-.tituloDos {
-    display: flex;
-    justify-content: center;
-    font-size: 6vw;
+    .seccionUno {
+        display: flex;
+        flex-direction: column !important;
+    }
+    .contenedorCelu {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .tituloDos{
+     font-size:6vw;
+    transition: all 300ms;
     
 }
-.contenedorPerfiles {
-    width: 100vw;
+.tituloDos:hover {
+    font-size: 6vw;
 }
-.perfilesDestacados {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
+.caras{
+    width: 20vw;
+    height: 20vw;
+    border-radius:40vw;
+} 
+.contenedorMigas {
+    display: none;
 }
-.caraUno {
-    width: 28vw;
-    height: 28vw;
-    border-radius:14vw;
- }
-.caraDos {
-    width: 28vw;
-    height: 28vw;
-    border-radius:14vw;
-    margin-top: 5vw;
+.redsocial a img {
+    width: 10vw;
+    margin:0;
+    transition: all 300ms;
 }
-.caraTres {
-    width: 28vw;
-    height: 28vw;
-    border-radius: 14vw;
-    margin-top: 5vw;
+.redsocial a img:hover {
+    width: 33px;
 }
-.barraFooter {
-    width: 100%;
-    background-color: rgb(83, 81, 81); 
-    padding: 1em 0;
-    text-align: center;
-    bottom: 0;
+.tel__footer {
+ width: 80vw;
+font-size: 3vw !important;
 }
-    
-.redSocial {
-    display: flex;
-    justify-content:space-evenly;
-    margin-bottom: 5vw;
-
-}
-
-.barraFooter__lista{
-    list-style: none;
+.dir__footer{
+width: 80vw;
+font-size: 3vw !important;
 }
 .copy {
-    font-size: 3vw; }
-
-    /* Servicios */
-    .principalServicios {
-     width: 100%;
-     display: flex;
-     flex-direction: column;
-     margin-top: 10vw;
-     margin-bottom: 20vw;
-    }
-.flexsearch--wrapper {
-	height: auto;
-	width: auto;
-	max-width: 100%;
-	overflow: hidden;
-	background: transparent;
-	margin: 0;
-	position: static;
-}
-	
-.flexsearch--form {
-	overflow: hidden;
-	position: relative;
-}
-	
-.flexsearch--input-wrapper {
-	padding: 0 5vw 0 0;
-	overflow: hidden;
-}
-
-.flexsearch--input {
-  width: 100%;
-}
-
-.flexsearch {
-  padding: 0 8vw 0 16vw;
-  margin-top: 15vw;
-  margin-bottom: 25vw;
-}
-
-.flexsearch--input {
-  -webkit-box-sizing: content-box;
-	-moz-box-sizing: content-box;
-	box-sizing: content-box;
- 	height: 8vw;
-  padding: 0 3vw 0 1vw;
-	border-color: #888;
-  border-radius: 4.2vw; 
-  border-style: solid;
-	border-width: 0.5vw;
-  margin-top: 1vw;
-  color: #333;
-  font-family: 'Helvetica', sans-serif;
-	font-size: 4vw;
-	-webkit-appearance: none;
-	-moz-appearance: none;
-}
-	
-.flexsearch--submit {
-  position: absolute;
-	right: 0;
-	top: 0;
-	display: block;
-	width: 10vw;
-	height: 8vw;
-  padding: 0;
-  border: none;
-	margin-top: 1.5vw; 
-  margin-right: 1vw;
-	background: transparent;
-  color: #888;
-  font-family: 'Helvetica', sans-serif;
-  font-size: 4vw;
-  line-height: 4.5vw;
-}
-.contenedores {
-    display: flex;
-    flex-direction: column;
-    margin-top: 12vw;
-    margin-bottom: 30vw;
-}
-.serviciosContenedorIconos1 {
-    display: flex;
-   justify-content: center;
-   justify-content: space-around;
-   padding-left: 5vw; 
-   font-size: 2vw;
-}
-.serviciosContenedorTextoIcon1 {
-    display: flex;
-   justify-content: center;
-   justify-content: space-around;
-   padding-left: 3vw;
-   padding-top: 2vw;
-   font-size: 0.5vw;
-}
-.serviciosContenedor2 {
-    display: flex;
-   justify-content: center;
-   justify-content: space-around;
-   padding-top: 6vw;
-   padding-left: 5vw;
-   font-size: 2vw;
-}
-.serviciosContenedorTextoIcon2 {
-    display: flex;
-   justify-content: center;
-   justify-content: space-around;
-   padding-left: 3vw;
-   padding-top: 2vw;
-   font-size: 0.5vw;
+    font-size: 3vw !important;
 }
 }
