Entrega Desafio Aplicando SASS I

--- a/Style.css
+++ b/Style.css
@@ -107,7 +107,7 @@
 }
 .site-footer {
     padding: 5em 0;
-    background: linear-gradient(to bottom, grey, black 80%, black);
+    background: linear-gradient(to bottom, black 70%, grey);
     font-size: 14px;
     color:rgb(243, 236, 236);
 }
@@ -344,13 +344,8 @@
      margin-top: 5vw;
      margin-bottom: 10vw;
  }
- .header {
-    color: #36A0FF;
-    font-size: 27px;
-    padding: 10px;
-}
-
-.bigicon {
+ 
+ .bigicon {
     font-size: 35px;
     color: #36A0FF;
 }
