--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,7 +2,10 @@
 @import "./components/general";
 @import "./components/header";
 @import "./components/footer";
-@import "./components/servicios";
+@import "./components/index";
 @import "./components/usuarios";
 @import "./components/contacto";
 @import "./components/conviertetegaucho.scss";
+@import "./components/servicios"
+
+
