--- a/scss/components/_servicios.scss
+++ b/scss/components/_servicios.scss
@@ -24,8 +24,7 @@
 
 }
 .serviciosContenedorIconos1 {
-    display: flex;
-   justify-content: center;
+    @extend %flex-center;
    justify-content: space-around;
    padding-left: 5vw;
 }
@@ -38,15 +37,13 @@
 }
 
 .serviciosContenedorTextoIcon1 {
-    display: flex;
-   justify-content: center;
+@include flexbox (row,center,center);
    justify-content: space-around;
    padding-left: 5vw;
    padding-top: 2vw;
 }
 .serviciosContenedor2 {
-    display: flex;
-   justify-content: center;
+    @extend %flex-center;
    justify-content: space-around;
    padding-top: 6vw;
    padding-left: 5vw;
@@ -59,8 +56,7 @@
     }
 }
 .serviciosContenedorTextoIcon2 {
-    display: flex;
-   justify-content: center;
+    @include flexbox (row,center,center);
    justify-content: space-around;
    padding-left: 3vw;
    padding-top: 2vw;
