--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -1,16 +1,42 @@
+*, ::after, ::before {
+    box-sizing: border-box;
+}
 .imagen__celular {
     width: 40vw;
     height: 45vw;
+    margin-bottom: 10vw;
     filter: blur(0);
     transition: all 0.5s linear;
     &:hover {
     filter: blur(20px)
     }
 }
+.cont__imagenqr {
+ @extend %flex-center;
+}
+
 .contenedorTitulodos {
     margin-top: 20vw;
     margin-bottom: 10vw;  
 } 
+.faqsss {
+    position: relative;
+    width: 100%;
+    padding: 45px 0;
+    background-color: #b5b5b5;
+}
+.card {
+    transition: all 0.2s ease;
+    cursor: pointer;
+    &:hover{
+    box-shadow: 5px 6px 6px 2px #e9ecef;
+    transform: scale(1.1);
+    }
+}
+.subtitle-funcionamiento {
+    font-weight: bolder;
+    color: #000;
+}
 .tituloDos{
     transition: all 300ms;
     
@@ -18,18 +44,12 @@
 .tituloDos:hover {
     font-size: 3vw;
 }
-.contenedorPerfiles {
-   margin-bottom: 30vw;
-}
-.perfilesDestacados {
+.gauchos__destacados {
     display: flex;
+    flex-direction: row;
     justify-content: space-evenly;
 }
-.caras{
-    width: 14vw;
-    height: 14vw;
-    border-radius:7vw;
-}
+
 /* SECCION FINAL Y FOOTER----- */
 .section-subscribe {
     padding: 5em 0;
@@ -74,9 +94,7 @@
         flex-direction: column !important;
     }
     .contenedorCelu {
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        display: none;
     }
     .tituloDos{
      font-size:6vw;
@@ -110,9 +128,7 @@
         flex-direction: column !important;
     }
     .contenedorCelu {
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        display: none;
     }
     .tituloDos{
      font-size:6vw;
