--- a/scss/components/_servicios.scss
+++ b/scss/components/_servicios.scss
@@ -41,6 +41,7 @@
    justify-content: space-around;
    padding-left: 5vw;
    padding-top: 2vw;
+   color: white;
 }
 .serviciosContenedor2 {
     @extend %flex-center;
@@ -60,6 +61,7 @@
    justify-content: space-around;
    padding-left: 3vw;
    padding-top: 2vw;
+   color: white;
 }
 
 /*********************
