probando fondo rojo conviertetehtml

--- a/css/main.css
+++ b/css/main.css
@@ -297,7 +297,8 @@
     padding-right: 2vw; } }
 
 .convierte__gaucho {
-  width: 100vw; }
+  width: 100vw;
+  background-color: red; }
 
 .form-holder {
   display: flex;
