borrando fondo rojo conviertetehtml

--- a/css/main.css
+++ b/css/main.css
@@ -297,8 +297,7 @@
     padding-right: 2vw; } }
 
 .convierte__gaucho {
-  width: 100vw;
-  background-color: red; }
+  width: 100vw; }
 
 .form-holder {
   display: flex;
